INDLEDENDE_PROGRAMERING - Copy/problem1-handout/grading/2023-12-15-09-05-20/compile.err
WaterTemps.java:7: error: cannot find symbol
        Scanner scanner = new Scanner(System.in).useLocale(Locale.ENGLISH);
        ^
  symbol:   class Scanner
  location: class WaterTemps
WaterTemps.java:7: error: cannot find symbol
        Scanner scanner = new Scanner(System.in).useLocale(Locale.ENGLISH);
                                                           ^
  symbol:   variable Locale
  location: class WaterTemps
WaterTemps.java:7: error: cannot find symbol
        Scanner scanner = new Scanner(System.in).useLocale(Locale.ENGLISH);
                              ^
  symbol:   class Scanner
  location: class WaterTemps
3 errors
